--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,4 @@
 <p id="notice"><%= notice %></p>
-
-
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<%@cart.line_items.each do |item|%>
+<%=item.product.title%><br>
+<% end %>
