--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,12 +2,15 @@
 <h1>All Books</h1>
 <%@products.each do |product|%>
 <div class="entry">
-  <h2><%=product.title%></h2>
+  <h2>
+  	<%=product.title%>
+  </h2>
   <%=sanitize(product.description)%>
   <div class="price_line">
     <span class="price">
       <%=number_to_currency(product.price,unit:"￥")%>
     </span>
+    <%=button_to("Add to Cart",line_items_path(product_id:product))%>
   </div>
 </div>
 <%end%>
