--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,12 +1,21 @@
-
-<h2>Your Book Cart</h2>
-<ul>
+<div class="cart_title">购物车</div>
+<table class="cart_list" border="1">
   <%@cart.line_items.each do |item|%>
-    <li>
-      <%=item.quantity%>&times; <%=item.product.title%>
-    </li>
+    <tr height=30px>
+      <td width="50px"><%=item.quantity%>&times;</td>
+      <td><%=item.product.title%></td>
+      <td width="80px" class="item_price">
+        <%=number_to_currency(item.total_price,unit:"￥")%>
+      </td>
+    </tr>
   <% end %>
-</ul>
-<%=button_to("back to index",store_path)%>
-<%= link_to 'Show', @cart %> |
-<%= link_to 'Back', carts_path %>
+    <tr class="total_line">
+      <td colspan="2" align="left">总价</td>
+      <td class="total_cell">
+      	<%=number_to_currency(@cart.total_price,unit:"￥")%>
+      </td>
+    </tr>
+</table>
+<%=button_to("返回商品目录",store_path)%>
+<%=button_to("清空购物车",@cart,:method => :delete,
+	comfirm:"确认清空吗？")%>
