--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -32,7 +32,7 @@ img {
   padding-top: 2%;
 }
 .cart_title{
-  font:120% bold;
+  font-size: smaller;
   text-align: center;
 }
 .cart_list{
@@ -44,4 +44,13 @@ img {
 .total_line .total_cell{
   font-weight: bold;
   border-top: 1px solid #595;
+}
+#cart,#cart table{
+  font-size: smaller;
+  color: white;
+}
+#cart table{
+  border-top: 1px dotted #595;
+  border-bottom: 1px dotted #595;
+  margin-bottom: 10px;
 }
