--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,13 @@
     </div>
     <div class="content">
       <div class="left">
-        <%=@time%>
+        <div id="cart">
+        <%if @cart%>
+          <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+            <%= render(@cart) %>
+          <% end %>
+        <%end%>
+        </div>
       	<ul>
          <li><a href="http://www.baidu.com">百度一下</a></li> 
          <li><a href="http://www.baidu.com">百度一下</a></li> 
