--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -11,7 +11,7 @@
     <span class="price">
       <%=number_to_currency(product.price,unit:"￥")%>
     </span>
-    <%=button_to("添加到购物车",line_items_path(product_id:product))%>
+    <%=button_to("添加到购物车",line_items_path(product_id:product),remote:true)%>
   </div>
 </div>
 <%end%>
