--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -6,6 +6,8 @@
   font-size: 38px;
   font-weight: bold;
   color: #282;
+  height: 40px;
+  line-height: 40px;
   background: #9c9;
   text-align: center;
 }
