--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,4 +1,6 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
 <%= stylesheet_link_tag  "store", :media => "all" %>
 <h1>All Books</h1>
 <%@products.each do |product|%>
