--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -8,4 +8,5 @@
       </td>
     </tr>
 </table>
+<%=button_to("checkout",new_order_path,method: :get)%>
 <%=button_to("清空购物车",cart,:method => :delete)%>
