--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -27,3 +27,4 @@
 <br />
 
 <%= link_to 'New Order', new_order_path %>
+<p><%=will_paginate @orders,{previous_label:"上一页",next_label:"下一页",page_links:false}%></p>
