--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -14,7 +14,7 @@
       <%=number_to_currency(product.price,unit:"￥")%>
     </span>
     <form action="/line_items?product_id=<%=product.id%>" method="post" data-remote='true'>
-      <input type="text" name="quantity" size="2" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')">
+      <input type="text" name="quantity" value="1" size="2" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')">
       <input type="submit" value="添加到购物车">
     </form>
   </div>
