--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,12 +1,12 @@
-<div class="cart_title">购物车</div>
+<div class="cart_title"><%=t('.cart')%></div>
 <table>
   <%=render(cart.line_items)%>
     <tr class="total_line">
-      <td colspan="2" align="left">总价</td>
+      <td colspan="2" align="left"><%=t('.total_price')%></td>
       <td class="total_cell">
         <%=number_to_currency(cart.total_price,unit:"￥")%>
       </td>
     </tr>
 </table>
-<%=button_to("checkout",new_order_path,method: :get)%>
-<%=button_to("清空购物车",cart,:method => :delete)%>
+<%=button_to(t('.checkout'),new_order_path,method: :get)%>
+<%=button_to(t('.delete'),cart,:method => :delete)%>
