--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label t('.name') %>
     <%= f.text_field :name,size: 40 %>
   </div>
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label t('.address') %>
     <%= f.text_area :address,rows: 3, cols: 40 %>
   </div>
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label t('.email') %>
     <%= f.text_field :email, size:40%>
   </div>
   <div class="field">
-    <%= f.label :pay_type %><br />
+    <%= f.label t('.pay_type') %>
     <%= f.select :pay_type,Order::PAYMENT_TYPES,
-                  prompt: '请选择一种支付方式' %>
+                  prompt: t('.choose') %>
   </div>
   <div class="actions">
-    <%= f.submit 'Please Order' %>
+    <%= f.submit t('.submit')%>
   </div>
 <% end %>
