--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing orders</h1>
+<h1><%=t('.list_orders')%></h1>
 <table>
   <tr>
-    <th>Name</th>
-    <th>Address</th>
-    <th>Email</th>
-    <th>Pay type</th>
+    <th><%=t('.name')%></th>
+    <th><%=t('.address')%></th>
+    <th><%=t('.email')%></th>
+    <th><%=t('.pay_type')%></th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,12 +15,12 @@
     <td><%= order.address %></td>
     <td><%= order.email %></td>
     <td><%= order.pay_type %></td>
-    <td><%= link_to 'Show', order %></td>
-    <td><%= link_to 'Edit', edit_order_path(order) %></td>
-    <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to t('.show'), order %></td>
+    <td><%= link_to t('.edit'), edit_order_path(order) %></td>
+    <td><%= link_to t('.destroy'), order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 <br />
-<%= link_to 'New Order', new_order_path %>
-<p><%=will_paginate @orders,{previous_label:"上一页",next_label:"下一页",page_links:false}%></p>
+<%= link_to t('.new'), new_order_path %>
+<p><%=will_paginate @orders,{previous_label:t('.previous'),next_label:t('.next')}%></p>
