--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <div class="depot_form">
   <fieldset>
-  	<legend>Please Enter Your Details</legend>
+  	<legend><%=t('.msg')%></legend>
   	<%= render 'form'%>
   </fieldset>
 </div>
