--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,5 @@
 <h1>欢迎您<%=@hx.name%></h1>
-现在是北京时间<%=@time%><br/>
+现在是<%=I18n.l @time%><br/>
 这儿有<%=pluralize(@total_orders,"order")%>。<br>
-<%=link_to 'back_to_index',store_path%>
+<%=link_to 'back_to_index',store_path%><br>
+<%=link_to 'ad'%>
